# cocoindex

./: .pre-commit-config.yaml  Cargo.toml
src/: lib.rs
