[package]
name = "cocoindex"
version = "0.1.0"
edition = "2021"
description = "A high-performance document indexing and search library with Python bindings"
license = "Apache-2.0"
repository = "https://github.com/cocoindex-io/cocoindex"
readme = "README.md"
keywords = ["indexing", "search", "embeddings", "vector-search", "nlp"]
categories = ["text-processing", "science"]

[lib]
name = "cocoindex"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Hashing utilities
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
